--- a/src/components/Header/header.module.scss
+++ b/src/components/Header/header.module.scss
@@ -1,5 +1,8 @@
 @import '../../styles/mixins.scss';
 .header {
+  position: sticky;
+  top: 0;
+  z-index: 1000;
   width: 100%;
   height: 80px;
   padding: 0 22px;
@@ -19,7 +22,6 @@
   &__title {
     cursor: pointer;
     padding: 8px 0;
-    text-decoration: none;
     color: #000000d9;
     &:hover {
       color: #1890ff;
@@ -30,14 +32,13 @@
   &__nav {
     display: flex;
     align-items: center;
-    gap: 9px;
+    gap: 27px;
 
     &__signUp {
       padding: 6px 18px 10px;
     }
 
     &__signIn {
-      padding-top: auto;
       padding: 8px 18px 8px;
       color: #000000d9;
       &:hover {
