--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -26,6 +26,16 @@ li {
   padding: 0;
 }
 
+a {
+  text-decoration: none;
+}
+
+fieldset {
+  margin: 0;
+  padding: 0;
+  border: none;
+}
+
 button {
   background: none;
   border: none;
