--- a/src/styles/mixins.scss
+++ b/src/styles/mixins.scss
@@ -17,3 +17,31 @@
 
   color: #000000bf;
 }
+
+@mixin skeletonAnimation {
+  background: linear-gradient(90deg, #ebeef3 25%, #f8f8f8 50%, #ebeef3 75%);
+  background-size: 200% 100%;
+  animation: shimmer 1.9s linear infinite;
+}
+
+@keyframes shimmer {
+  0% {
+    background-position: -200% 0;
+  }
+  100% {
+    background-position: 200% 0;
+  }
+}
+
+@mixin form-container {
+  border-radius: 6px;
+  border: 1px solid #d9d9d9;
+  background: #ffffff;
+  box-shadow:
+    0px 0.61px 2.93px 0px #00000005,
+    0px 1.46px 7.05px 0px #00000007,
+    0px 2.75px 13.27px 0px #00000009,
+    0px 4.91px 23.68px 0px #0000000b,
+    0px 9.19px 44.28px 0px #0000000d,
+    0px 22px 106px 0px #00000012;
+}
