--- a/src/components/Skeleton/ArticleSkeleton/ArticleSkeleton.module.scss
+++ b/src/components/Skeleton/ArticleSkeleton/ArticleSkeleton.module.scss
@@ -20,6 +20,7 @@
   }
 
   &__article {
+    margin: 26px auto 64px auto;
     max-width: 938px;
     height: 807px;
     padding: 15px 14px 24px 16px;
